--- a/valentine.html
+++ b/valentine.html
@@ -8,9 +8,10 @@
 		<link rel="stylesheet" href="css/valentine.css" />
 	</head>
 	<body>
-		<button id="themeToggle" class="toggle">🌙</button>
+		<canvas id="starfield"></canvas>
+		<!-- <script src="script.js"></script> -->
+		<!-- <button id="themeToggle" class="toggle">🌙</button> -->
 
-		<div class="bg-hearts"></div>
 
 		<div class="container">
 			<h1 id="text"></h1>
